# nxuiengine

./: README.md  SonicUI.sln
SonicUI/: ConstDefine.h  DibMgr.cpp  DibMgr.h  GifHandler.cpp  GifHandler.h  ISonicBaseData.h  SimpleToolTip.cpp  SimpleToolTip.h  SonicAnimation.h  SonicBase.cpp  SonicBaseData.cpp  SonicImage.cpp  SonicImage.h  SonicPaint.cpp  SonicPaint.h  SonicSkin.cpp  SonicString.cpp  SonicString.h  SonicTextScrollBar.cpp  SonicTextScrollBar.h  SonicUI.cpp  SonicUI.h  SonicUI.vcproj  SonicUI.vcproj.7.10.old  SonicWndEffect.cpp  SonicWndEffect.h  Utility.cpp  stdafx.cpp  stdafx.h
SonicUI/include/: InjectTool.h  ximadefs.h  ximage.h
SonicUI/lib/: InjectTool.lib
SonicUIDemo/: Resource.h  SkinDlg.cpp  SkinDlg.h  SkinMgr.cpp  SonicUIDemo.cpp  SonicUIDemo.rc  SonicUIDemo.vcproj  SonicUIDemo.vcproj.7.10.old  stdafx.h
include/: ISonicUI.h
src/: CMakeLists.txt  nxui.sln
src/SonicUI/: ISonicBaseData.h  SSE.cpp  SonicBase.cpp  SonicSkin.h  SonicUI.vcproj.7.10.old
src/SonicUIDemo/: stdafx.h
src/bxuiengine/: CMakeLists.txt
src/bxuiengine/SonicUI/: DibMgr.cpp  ReadMe.txt  SonicTextScrollBar.cpp  SonicUI.h  stdafx.cpp
src/bxuiengine/SonicUI/include/: ximage.h
src/bxuiengine/sonicui/: ISonicUI.h
src/bxuiengine/src/: SimpleToolTip.cpp  SonicUI.cpp  SonicWndEffect.cpp
src/cmake/: prj_build_config.cmake  prj_utils.cmake
src/examples/: CMakeLists.txt
src/examples/basic/: CMakeLists.txt  SkinMgr.h  SonicUIDemo.rc  SonicUIDemo.vcxproj  SonicUIDemo.vcxproj.filters  basicdemo.rc  basicdemo.vcxproj  basicdemo.vcxproj.filters  stdafx.cpp  stdafx.h
src/nxuiengine/: CMakeLists.txt  nxuiengine.vcproj  nxuiengine.vcxproj  nxuiengine.vcxproj.filters
src/nxuiengine/inc/nxui/: GifHandler.h  SSE.h  SonicAnimation.h  SonicImage.h  SonicPaint.h  SonicSkin.h  SonicString.h  SonicTextScrollBar.h  SonicUI.h  SonicWndEffect.h  nxuistd.h
src/nxuiengine/src/: DibMgr.cpp  GifHandler.cpp  SSE.cpp  SimpleToolTip.cpp  SonicAnimation.cpp  SonicBase.cpp  SonicBaseData.cpp  SonicImage.cpp  SonicPaint.cpp  SonicSkin.cpp  SonicString.cpp  SonicTextScrollBar.cpp  SonicUI.cpp  SonicWndEffect.cpp  Utility.cpp  nxuistd.cpp  stdafx.cpp
